# rose-pine-build

./: .gitignore  .rose_pine.ron  Cargo.toml  flake.nix  license  readme.md  template.css
.github/workflows/: cd.yaml
crates/palette/: Cargo.toml  lib.rs
nix/: flake.nix  generate-artifacts.py  generated.nix  patch.nix
palette/: Cargo.toml  lib.rs  variant.rs
src/: casing.rs  colors.rs  config.rs  format.rs  generate.rs  lib.rs  main.rs  palette.rs  parse.rs  parse_test.rs  utils.rs
src/generate/: mod.rs  replace.rs  templating.rs
src/parse/: mod.rs  test.rs
