[package]
name = "rosepine"
version = "0.1.0"
edition = "2021"
authors = ["Julia Mertz <info@juliamertz.dev>"]
license = "GPL-2.0-or-later"

[[bin]]
name = "rosepine"

[dependencies]
clap = { version = "4.5.21", default-features = false, features = ["derive", "std", "help", "usage"] }
colors-transform = "0.2.11"
strum = "0.26.3"
strum_macros = "0.26.4"
palette = { path = "./palette" }
heck = "0.5.0"
