[package]
name = "palette"
description = "All natural pine, faux fur and a bit of soho vibes for the classy minimalist"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
colors-transform = "0.2.11"
heck = "0.5.0"
strum = "0.26.3"
strum_macros = "0.26.4"
serde = { version="1.0.215", features = ["derive"] }
serde_json = "1.0.133"
